Downgrade to java 17